--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@
     .dropdown-menu > li:hover > .dropdown-submenu {
     display: block;
     }
+
+    #map {
+        height: 400px; /* The height is 400 pixels */
+        width: 100%; /* The width is the width of the web page */
+      }
