--- a/style.css
+++ b/style.css
@@ -21,12 +21,29 @@
         height: 400px; /* The height is 400 pixels */
         width: 100%; /* The width is the width of the web page */
       }
-
-     
+      .custom-map-control-button{
+         background: hsla(0, 0%, 5%, 0.9);
+         color:hsla(240, 22%, 95%, 0.887) ;
+         border-radius: 50%;
+         font-size:1.5px;
+         width: 55px;
+         height: 55px;
+      }
+      
 
     footer .container-fluid{
       
-      background-color: rgba(0,0,0, .1);
+      background-color: rgba(0, 0, 0, 0.1);
       
       
     }
+    footer .container-fluid p{
+       line-height: 2;
+    }
+
+    @media screen and (max-width :992px) {
+        .nav-item .nav-link >.dropdown-menu > .dropdown-item > .dropdown-submenu {
+            display: block;
+          }
+    }
+  
