fix:dropdown-toggle submenu

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@
     display: block;
     }
 
+    @media (max-width: 576px){
+      .dropdown-item::before{
+         transform: rotate(-90deg);
+      }
+    }
+
     #map {
         height: 400px; /* The height is 400 pixels */
         width: 100%; /* The width is the width of the web page */
@@ -47,3 +53,4 @@
           }
     }
   
+    
