--- a/style.css
+++ b/style.css
@@ -22,6 +22,40 @@
          transform: rotate(-90deg);
       }
     }
+    .toggle-mode{
+       position:absolute;
+       top: 25%;
+       right: 25%;
+    }
+    .toggle-mode__button{
+       width: 4rem;
+       height: 2rem;
+       appearance: none;
+       border: none;
+       border-radius: 1rem;
+       inset: 2px;
+       box-shadow:inset 0 1px 2px hsla(0, 0%, 5%, 0.9);
+                  
+    }
+    .toggle-mode__button::before{
+      content: "";
+      width: 2rem;
+      height: 2rem;
+      display: block;
+      background-color: hsla(0, 0%, 5%, 0.919);
+      border-radius: 50%;
+      position: absolute;
+      top:2px;
+      left: 0;
+      box-shadow: 0 1px 2px hsla(0, 0%, 5%, 0.9),
+                  0 1px 3px hsla(0, 0%, 5%, 0.8),
+                  0 1px 4px hsla(0, 0%, 5%, 0.8);
+      transition: left .1s ease-in-out;
+    }
+    
+    .toggle-mode__button.act::before{
+       left:2rem;
+    }
 
     #map {
         height: 400px; /* The height is 400 pixels */
