--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+:root{
+  --toggleBlack:hsla(0, 0%, 5%, 0.9);
+}
 .dropdown-menu li {
     position: relative;
     }
@@ -16,45 +18,60 @@
     .dropdown-menu > li:hover > .dropdown-submenu {
     display: block;
     }
-
-    @media (max-width: 576px){
+    .light-dark__toggle{
+      width: 4rem;
+      position:absolute;
+      top: 1vw;
+      left: 75vw;
+      
+   }
+    @media screen and (max-width: 576px){
       .dropdown-item::before{
          transform: rotate(-90deg);
       }
+      .light-dark__toggle{
+         left: 65vw;
+      }
+      
     }
+    
     .toggle-mode{
        position:absolute;
-       top: 25%;
+       top: 0%;
        right: 25%;
+       
     }
     .toggle-mode__button{
-       width: 4rem;
-       height: 2rem;
+       width: 2rem;
+       height: 1rem;
        appearance: none;
        border: none;
        border-radius: 1rem;
        inset: 2px;
-       box-shadow:inset 0 1px 2px hsla(0, 0%, 5%, 0.9);
-                  
+       box-shadow:inset 0 1px 2px var(--toggleBlack);
+       
+              
     }
     .toggle-mode__button::before{
       content: "";
-      width: 2rem;
-      height: 2rem;
+      width: 1rem;
+      height: 1rem;
       display: block;
-      background-color: hsla(0, 0%, 5%, 0.919);
+      background-color:var(--toggleBlack);
       border-radius: 50%;
       position: absolute;
-      top:2px;
-      left: 0;
-      box-shadow: 0 1px 2px hsla(0, 0%, 5%, 0.9),
+      top:39%;
+      left:0;
+      box-shadow: 0 1px 2px var(--toggleBlack),
                   0 1px 3px hsla(0, 0%, 5%, 0.8),
                   0 1px 4px hsla(0, 0%, 5%, 0.8);
       transition: left .1s ease-in-out;
     }
+   
+    
     
     .toggle-mode__button.act::before{
-       left:2rem;
+       left:1rem;
     }
 
     #map {
@@ -62,7 +79,7 @@
         width: 100%; /* The width is the width of the web page */
       }
       .custom-map-control-button{
-         background: hsla(0, 0%, 5%, 0.9);
+         background: var(--toggleBlack);
          color:hsla(240, 22%, 95%, 0.887) ;
          border-radius: 50%;
          font-size:1.5px;
